react-intersection-observer

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
+    "react-intersection-observer": "^9.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
